# fc-audit

./: .coverage  .gitignore  .pre-commit-config.yaml  .windsurfrules  ANNOUNCEMENT.md  README.md  Taskfile.yaml  Taskfile.yml  mkdocs.yml  pyproject.toml  t
.tox/py311/: .tox-info.json
docs/: gen_ref_pages.py
docs/css/: code_select.css
docs/reference/: alias_outputter.md  cli.md  exceptions.md  fcstd.md  logging.md  parser.md  path_valid.md  properties_outputter.md  reference.md  reference_collector.md  reference_outputter.md  validation.md
fc_audit/: __main__.py  cli.py  fcstd.py
scripts/: check-announcements  verify_docs.py
src/fc_audit/: __main__.py  alias_outputter.py  cli.py  exceptions.py  fcstd.py  logging.py  output.py  parser.py  path_valid.py  properties_outputter.py  reference.py  reference_collector.py  reference_outputter.py  validation.py  version.py
tests/: .coverage  conftest.py  test_alias_outputter.py  test_cli.py  test_cli_edge_cases.py  test_cli_error_paths.py  test_fcstd.py  test_output.py  test_path_valid.py  test_properties_outputter.py  test_reference_collector.py
tests/data/: Empty.FCStd  Invalid.FCStd  Test1.FCStd
