[project]
name = "fc-audit"
version = "0.1.0"
description = "Command line audit tool"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "lxml>=5.1.0",
    "mypy>=1.15.0",
    "radon>=6.0.1",
    "ruff>=0.11.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=fc_audit"
testpaths = ["tests"]
